--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="demo-banner" role="status" aria-live="polite">
+    Démonstration — aucune donnée réelle n’est transmise à l’URSSAF.
+  </div>
   <header class="header">
     <div class="brand">
       <img src="assets/logo.png" alt="Domus Premium" class="logo">
@@ -62,6 +65,7 @@
 
   <footer class="footer">
     <p>Domus Premium — Démonstrateur AICI • <a href="https://www.domuspremium.fr" target="_blank" rel="noopener">www.domuspremium.fr</a></p>
+    <p><a href="cgu.html">CGU</a> • <a href="confidentialite.html">Confidentialité</a></p>
   </footer>
 
   <script src="js/app.js"></script>
