--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Domus AICI — Démo Avance Immédiate</title>
+  <title>Domus Premium — Avance Immédiate (Démo)</title>
   <link rel="icon" href="assets/favicon.ico">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -16,7 +16,7 @@
       <img src="assets/logo.png" alt="Domus Premium" class="logo">
       <div class="titles">
         <h1>Domus Premium — Avance Immédiate (Démo)</h1>
-        <p class="subtitle">Maquette technique pour habilitation URSSAF (lecture seule)</p>
+        <p class="subtitle">Simulation pour habilitation URSSAF — Services à la personne (lecture seule)</p>
       </div>
     </div>
   </header>
