--- a/confidentialite.html
+++ b/confidentialite.html
@@ -1,26 +1,15 @@
 <!doctype html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Confidentialité — Domus Premium (Démo AICI)</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
+<html lang="fr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Confidentialité — Domus Premium (Démo AICI)</title><link rel="stylesheet" href="css/style.css"></head>
 <body>
   <div class="demo-banner">Démonstration — aucune donnée réelle n’est transmise à l’URSSAF.</div>
   <main class="container">
     <section class="card">
       <h1>Politique de Confidentialité (Démo)</h1>
-      <p>La présente maquette ne collecte ni ne stocke de données personnelles côté serveur. Les informations saisies servent uniquement à <strong>simuler</strong> un calcul et un envoi.</p>
-      <h2>Données affichées</h2>
-      <ul>
-        <li>Les champs du formulaire (client, prestation, date, montant) restent dans le navigateur.</li>
-        <li>L’historique présenté est <strong>fictif</strong> et généré localement.</li>
-      </ul>
-      <h2>Cookies/traceurs</h2>
-      <p>Cette maquette ne dépose aucun cookie fonctionnel. Des logs techniques standard côté hébergeur peuvent exister (ex. Vercel) pour la sécurité et la mesure de performance.</p>
+      <p>Cette maquette ne collecte ni ne stocke de données personnelles côté serveur.</p>
+      <h2>Données</h2><ul><li>Formulaire traité côté navigateur</li><li>Historique fictif local</li></ul>
+      <h2>Cookies</h2><p>Pas de cookies fonctionnels. L’hébergeur peut produire des logs techniques.</p>
       <p><a href="index.html">Retour</a></p>
     </section>
   </main>
-</body>
-</html>
+</body></html>
