--- a/confidentialite.html
+++ b/confidentialite.html
@@ -1,6 +1,7 @@
-<!doctype html>
-<html lang="fr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Confidentialité — Domus Premium (Démo AICI)</title><link rel="stylesheet" href="css/style.css"></head>
+<!doctype html><html lang="fr"><head><meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Confidentialité — Domus Premium (Démo AICI)</title>
+<link rel="stylesheet" href="css/style.css"></head>
 <body>
   <div class="demo-banner">Démonstration — aucune donnée réelle n’est transmise à l’URSSAF.</div>
   <main class="container">
