--- a/cgu.html
+++ b/cgu.html
@@ -13,6 +13,18 @@
     main { max-width:900px; margin:0 auto; padding:32px 20px; }
     h2 { margin-top:28px; font-size:1.15rem; }
     a { color:#0b1f36; }
+    .btn-return {
+      display:inline-block;
+      margin-top:24px;
+      padding:10px 20px;
+      border-radius:50px;
+      background:#0b1f36;
+      color:#fff;
+      text-decoration:none;
+      font-weight:600;
+      transition:background .2s;
+    }
+    .btn-return:hover { background:#09223d; }
     footer { text-align:center; padding:20px 0; color:#6b7280; font-size:.9rem; border-top:1px solid #e5e7eb; margin-top:40px; }
   </style>
 </head>
@@ -57,6 +69,8 @@
     <h2>8. Droit applicable</h2>
     <p>Le présent site et ses contenus sont soumis au droit français.  
     En cas de litige, les tribunaux compétents seront ceux du ressort de Rennes.</p>
+
+    <a href="/" class="btn-return">← Retour à la maquette</a>
   </main>
 
   <footer>
