--- a/cgu.html
+++ b/cgu.html
@@ -2,81 +2,33 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Conditions d’utilisation — Maquette Avance Immédiate | Domus Premium</title>
-  <meta name="description" content="Conditions d’utilisation de la maquette Avance Immédiate Domus Premium – démonstration technique sans transmission réelle à l’Urssaf.">
-  <link rel="stylesheet" href="css/styles.min.css">
-  <style>
-    body { font-family: Inter, sans-serif; margin:0; background:#fff; color:#0b1f36; line-height:1.6; }
-    header { background:#0b1f36; color:#fff; text-align:center; padding:50px 20px 40px; }
-    h1 { font-size:clamp(1.7rem, 3vw, 2.3rem); margin:0; }
-    main { max-width:900px; margin:0 auto; padding:32px 20px; }
-    h2 { margin-top:28px; font-size:1.15rem; }
-    a { color:#0b1f36; }
-    .btn-return {
-      display:inline-block;
-      margin-top:24px;
-      padding:10px 20px;
-      border-radius:50px;
-      background:#0b1f36;
-      color:#fff;
-      text-decoration:none;
-      font-weight:600;
-      transition:background .2s;
-    }
-    .btn-return:hover { background:#09223d; }
-    footer { text-align:center; padding:20px 0; color:#6b7280; font-size:.9rem; border-top:1px solid #e5e7eb; margin-top:40px; }
-  </style>
+  <title>Conditions Générales d’Utilisation – Maquette AICI Domus Premium</title>
 </head>
 <body>
-  <header>
-    <h1>Conditions d’utilisation — Maquette Avance Immédiate</h1>
-    <p>Domus Premium — Simulation technique (environnement de démonstration)</p>
-  </header>
+  <p><strong>Démonstration — aucune donnée réelle n’est transmise à l’URSSAF.</strong></p>
 
-  <main>
-    <p>Le présent site est une <strong>maquette de démonstration</strong> destinée à illustrer le fonctionnement du dispositif <strong>Avance Immédiate</strong> proposé par l’Urssaf.  
-    Aucune donnée réelle n’est transmise à l’Urssaf ni à aucun autre organisme.</p>
+  <h1>Conditions Générales d’Utilisation (CGU)</h1>
+  <p>Version simplifiée pour la maquette de démonstration AICI de Domus Premium.</p>
 
-    <h2>1. Objet de la maquette</h2>
-    <p>Cette maquette a pour unique objectif de présenter la structure technique et le parcours utilisateur simulé dans le cadre de la procédure d’habilitation à l’API Avance Immédiate.  
-    Elle ne permet pas de créer ni de valider une véritable demande de paiement.</p>
+  <h2>Objet</h2>
+  <p>Cette maquette a pour seul objectif d’illustrer un parcours hypothétique de demande d’avance immédiate dans le cadre de la procédure d’habilitation à l’API Avance Immédiate.</p>
 
-    <h2>2. Données saisies</h2>
-    <p>Les données renseignées dans les formulaires (nom, e-mail, téléphone, code postal, description du besoin) sont utilisées uniquement pour la démonstration et la prise de contact par Domus Premium.  
-    Elles ne sont <strong>ni stockées ni transmises</strong> à l’Urssaf, à la DGFIP ou à tout tiers extérieur.</p>
+  <h2>Accès</h2>
+  <p>Consultation libre. Aucune authentification Urssaf n’est demandée et aucune action réelle n’est effectuée sur les systèmes de l’Urssaf.</p>
 
-    <h2>3. Absence de valeur contractuelle</h2>
-    <p>Les éléments affichés sur cette maquette (calculs, montants, statuts) sont purement indicatifs et n’ont aucune valeur contractuelle ou fiscale.</p>
+  <h2>Données et confidentialité</h2>
+  <p>Les éventuelles données saisies (nom, e-mail, téléphone, description du besoin, etc.) sont utilisées uniquement à des fins de démonstration et de prise de contact par Domus Premium.</p>
+  <p>Elles ne sont ni transmises à l’Urssaf, ni à la DGFIP, ni à tout autre organisme tiers.</p>
+  <p>Le traitement des données suit la <a href="https://www.domuspremium.fr/confidentialite.html" target="_blank" rel="noopener noreferrer">Politique de confidentialité de Domus Premium</a>.</p>
 
-    <h2>4. Sécurité et confidentialité</h2>
-    <p>Le site est accessible en HTTPS et ne requiert aucune authentification Urssaf.  
-    Domus Premium ne demande jamais d’identifiants ni de mots de passe liés à votre compte particulier Urssaf.</p>
+  <h2>Responsabilité</h2>
+  <p>La maquette n’a pas de valeur contractuelle et peut comporter des simplifications ou des inexactitudes. Les montants et informations affichés sont purement indicatifs.</p>
 
-    <h2>5. Propriété intellectuelle</h2>
-    <p>La structure, le design et le code source de la maquette sont la propriété de Domus Premium.  
-    Le logo “Urssaf — Au service de notre protection sociale” est utilisé conformément à la charte graphique publique de l’Urssaf et uniquement à des fins de démonstration.</p>
+  <h2>Hébergement</h2>
+  <p>La maquette est hébergée sur la plateforme Vercel. Éditeur : Domus Premium, 35132 Vezin-le-Coquet.</p>
 
-    <h2>6. Données personnelles</h2>
-    <p>Les informations collectées via les formulaires de contact sont traitées conformément à la <a href="https://www.domuspremium.fr/confidentialite.html" target="_blank" rel="noopener noreferrer">Politique de confidentialité</a> de Domus Premium.  
-    Conformément au RGPD, vous pouvez exercer vos droits d’accès, de rectification et de suppression en écrivant à <a href="mailto:domuspremium35@gmail.com">domuspremium35@gmail.com</a>.</p>
-
-    <h2>7. Hébergement et contact</h2>
-    <p>Maquette hébergée sur <strong>Vercel</strong> — infrastructure mondiale sécurisée (CDN & SSL).<br>
-    Éditeur : <strong>Domus Premium</strong>, Rennes (35).<br>
-    Contact : <a href="mailto:domuspremium35@gmail.com">domuspremium35@gmail.com</a>.</p>
-
-    <h2>8. Droit applicable</h2>
-    <p>Le présent site et ses contenus sont soumis au droit français.  
-    En cas de litige, les tribunaux compétents seront ceux du ressort de Rennes.</p>
-
-    <a href="/" class="btn-return">← Retour à la maquette</a>
-  </main>
-
-  <footer>
-    <p>© <span id="year"></span> Domus Premium — Maquette Avance Immédiate. Tous droits réservés.</p>
-  </footer>
-
-  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
+  <p>
+    <a href="https://domus-aici.vercel.app/">Retour</a>
+  </p>
 </body>
 </html>
