--- a/assets/cgu.html
+++ b/assets/cgu.html
@@ -1,17 +1,34 @@
-<!doctype html><html lang="fr"><head><meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>CGU — Domus Premium (Démo AICI)</title>
-<link rel="stylesheet" href="css/style.css"></head>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8">
+  <title>Conditions Générales d’Utilisation – Maquette AICI Domus Premium</title>
+</head>
 <body>
-  <div class="demo-banner">Démonstration — aucune donnée réelle n’est transmise à l’URSSAF.</div>
-  <main class="container">
-    <section class="card">
-      <h1>Conditions Générales d’Utilisation (CGU)</h1>
-      <p>Version simplifiée pour la maquette de démonstration AICI de Domus Premium.</p>
-      <h2>Objet</h2><p>Illustrer un parcours hypothétique de demande d’avance immédiate.</p>
-      <h2>Accès</h2><p>Consultation libre. Aucune persistance côté serveur.</p>
-      <h2>Responsabilité</h2><p>La maquette n’a pas de valeur contractuelle et peut comporter des inexactitudes.</p>
-      <p><a href="index.html">Retour</a></p>
-    </section>
-  </main>
-</body></html>
+  <p><strong>Démonstration — aucune donnée réelle n’est transmise à l’URSSAF.</strong></p>
+
+  <h1>Conditions Générales d’Utilisation (CGU)</h1>
+  <p>Version simplifiée pour la maquette de démonstration AICI de Domus Premium.</p>
+
+  <h2>Objet</h2>
+  <p>Cette maquette a pour seul objectif d’illustrer un parcours hypothétique de demande d’avance immédiate dans le cadre de la procédure d’habilitation à l’API Avance Immédiate.</p>
+
+  <h2>Accès</h2>
+  <p>Consultation libre. Aucune authentification Urssaf n’est demandée et aucune action réelle n’est effectuée sur les systèmes de l’Urssaf.</p>
+
+  <h2>Données et confidentialité</h2>
+  <p>Les éventuelles données saisies (nom, e-mail, téléphone, description du besoin, etc.) sont utilisées uniquement à des fins de démonstration et de prise de contact par Domus Premium.</p>
+  <p>Elles ne sont ni transmises à l’Urssaf, ni à la DGFIP, ni à tout autre organisme tiers.</p>
+  <p>Le traitement des données suit la <a href="https://www.domuspremium.fr/confidentialite.html" target="_blank" rel="noopener noreferrer">Politique de confidentialité de Domus Premium</a>.</p>
+
+  <h2>Responsabilité</h2>
+  <p>La maquette n’a pas de valeur contractuelle et peut comporter des simplifications ou des inexactitudes. Les montants et informations affichés sont purement indicatifs.</p>
+
+  <h2>Hébergement</h2>
+  <p>La maquette est hébergée sur la plateforme Vercel. Éditeur : Domus Premium, 35132 Vezin-le-Coquet.</p>
+
+  <p>
+    <a href="https://domus-aici.vercel.app/">Retour</a>
+  </p>
+</body>
+</html>
