Revise privacy policy content and structure
Updated the privacy policy page to reflect new information about data handling and user rights.

--- a/assets/confidentialite.html
+++ b/assets/confidentialite.html
@@ -1,16 +1,84 @@
-<!doctype html><html lang="fr"><head><meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Confidentialité — Domus Premium (Démo AICI)</title>
-<link rel="stylesheet" href="css/style.css"></head>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8">
+  <title>Politique de confidentialité – Maquette AICI Domus Premium</title>
+</head>
 <body>
-  <div class="demo-banner">Démonstration — aucune donnée réelle n’est transmise à l’URSSAF.</div>
-  <main class="container">
-    <section class="card">
-      <h1>Politique de Confidentialité (Démo)</h1>
-      <p>Cette maquette ne collecte ni ne stocke de données personnelles côté serveur.</p>
-      <h2>Données</h2><ul><li>Formulaire traité côté navigateur</li><li>Historique fictif local</li></ul>
-      <h2>Cookies</h2><p>Pas de cookies fonctionnels. L’hébergeur peut produire des logs techniques.</p>
-      <p><a href="index.html">Retour</a></p>
-    </section>
-  </main>
-</body></html>
+  <p><strong>Démonstration — aucune donnée réelle n’est transmise à l’URSSAF.</strong></p>
+
+  <h1>Politique de confidentialité – Maquette Avance Immédiate (AICI)</h1>
+  <p>La présente page décrit la manière dont sont traitées les données saisies dans la maquette de démonstration AICI de Domus Premium, accessible à l’adresse <code>https://domus-aici.vercel.app/</code>.</p>
+
+  <h2>1. Nature de la maquette</h2>
+  <p>Ce site est une <strong>maquette de démonstration technique</strong> destinée à illustrer un parcours hypothétique d’Avance Immédiate dans le cadre de la procédure d’habilitation à l’API AICI de l’Urssaf.</p>
+  <p>Il ne s’agit ni d’un espace client, ni d’un portail officiel Urssaf, ni d’un outil de déclaration fiscale.</p>
+
+  <h2>2. Données collectées</h2>
+  <p>Les formulaires de la maquette peuvent vous inviter à saisir notamment :</p>
+  <ul>
+    <li>Nom et prénom,</li>
+    <li>Adresse e-mail,</li>
+    <li>Numéro de téléphone,</li>
+    <li>Code postal ou commune,</li>
+    <li>Description de votre besoin (bricolage, entretien, etc.).</li>
+  </ul>
+  <p>Ces données sont limitées au strict nécessaire pour :</p>
+  <ul>
+    <li>illustrer le fonctionnement du parcours AICI,</li>
+    <li>et permettre à Domus Premium de reprendre contact avec vous, le cas échéant.</li>
+  </ul>
+
+  <h2>3. Absence de transmission à l’Urssaf et à des tiers</h2>
+  <p><strong>Aucune</strong> des données saisies dans cette maquette n’est transmise à l’Urssaf, à la DGFIP ou à tout autre organisme extérieur.</p>
+  <p>Les échanges simulés avec l’API AICI ne concernent que des données fictives et techniques dans un objectif d’homologation.</p>
+
+  <h2>4. Responsable de traitement</h2>
+  <p>Le responsable de traitement est :</p>
+  <p>
+    <strong>Domus Premium – Christophe Rolland</strong><br>
+    23 rue du Loc’h<br>
+    35132 Vezin-le-Coquet<br>
+    E-mail : <a href="mailto:domuspremium35@gmail.com">domuspremium35@gmail.com</a>
+  </p>
+
+  <h2>5. Base légale et finalités</h2>
+  <p>Les données éventuellement collectées dans le cadre de cette maquette sont traitées sur la base :</p>
+  <ul>
+    <li>de votre <strong>consentement</strong>, lorsque vous soumettez volontairement un formulaire,</li>
+    <li>et de l’<strong>intérêt légitime</strong> de Domus Premium à tester son dispositif technique d’Avance Immédiate.</li>
+  </ul>
+  <p>Elles ne sont utilisées que pour :</p>
+  <ul>
+    <li>vous recontacter afin de répondre à votre demande,</li>
+    <li>et améliorer le parcours de démonstration.</li>
+  </ul>
+
+  <h2>6. Durée de conservation</h2>
+  <p>Les données saisies via la maquette sont conservées pour une durée limitée, strictement nécessaire au traitement de votre demande et aux tests techniques.</p>
+  <p>Au-delà, elles sont supprimées ou anonymisées.</p>
+
+  <h2>7. Sécurité</h2>
+  <p>Le site est accessible en HTTPS et hébergé sur la plateforme Vercel. Des mesures raisonnables de sécurité sont mises en œuvre pour protéger les données contre l’accès non autorisé.</p>
+
+  <h2>8. Vos droits (RGPD)</h2>
+  <p>Conformément au Règlement Général sur la Protection des Données (RGPD), vous disposez notamment des droits suivants :</p>
+  <ul>
+    <li>droit d’accès à vos données,</li>
+    <li>droit de rectification,</li>
+    <li>droit d’effacement (« droit à l’oubli »),</li>
+    <li>droit à la limitation du traitement,</li>
+    <li>droit d’opposition.</li>
+  </ul>
+  <p>Pour exercer vos droits, vous pouvez écrire à : <a href="mailto:domuspremium35@gmail.com">domuspremium35@gmail.com</a>.</p>
+  <p>Vous disposez également du droit d’introduire une réclamation auprès de la CNIL (www.cnil.fr).</p>
+
+  <h2>9. Lien avec la politique de confidentialité principale</h2>
+  <p>Pour l’ensemble des prestations de services à la personne proposées par Domus Premium en dehors de cette maquette technique, la politique de confidentialité détaillée est disponible ici :</p>
+  <p><a href="https://www.domuspremium.fr/confidentialite.html" target="_blank" rel="noopener noreferrer">https://www.domuspremium.fr/confidentialite.html</a></p>
+
+  <p>
+    <a href="https://domus-aici.vercel.app/">Retour</a>
+  </p>
+</body>
+</html>
